<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cobra</name>
  <version>0.12.0</version>
  <description>ament_lint wrapper for the Cobra static analyzer.</description>
  <maintainer email="ivan.perezdominguez@nasa.gov">Ivan Perez</maintainer>
  <license>Apache License 2.0</license>

  <depend>cobra_vendor</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
