<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cobra_vendor</name>
  <version>0.1.0</version>
  <description>CMake shim providing the cobra project.</description>
  <maintainer email="steven@openrobotics.org">Steven! Ragnarök</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>bison</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
